--- a/Pages/insurance.html
+++ b/Pages/insurance.html
@@ -22,7 +22,7 @@
                     <div class="w-[56%] flex flex-col gap-4">
                         <p class="text-3xl leading-[36px] font-semibold">Страхование здоровья </p>
                         <p class="text-[15px] leading-[18px]">Нужно посетить клинику или больницу, но вы не хотите или не можете выходить из дома? Найдите обученную и опытную медсестру, которая позаботится о повседневных делах ваших близких.</p>
-                        <button class="font-bold text-xl leading-[24px] text-white py-6 px-10 bg-[#FF0066] rounded-[9px] shadow-[0px_0px_10px_0px_#0000001A] w-fit">Оформить страховку</button>
+                        <button class="font-bold text-xl leading-[24px] mt-3 text-white py-6 px-10 bg-[#FF0066] rounded-[9px] shadow-[0px_0px_10px_0px_#0000001A] w-fit cursor-pointer">Оформить страховку</button>
                     </div>
                 </div>
                 <div class="flex items-center gap-6 w-full shadow-[0px_0px_20px_0px_#0000001A] bg-white py-[30px] px-10 rounded-[20px]">
@@ -110,7 +110,13 @@
         </div>
         <div class="flex flex-col gap-6 items-center">
             <p class="text-3xl leading-[36px] font-semibold">Нужна страховка прямо сейчас?</p>
-            <button class="px-3 py-2.5 font-semibold text-sm leading-[19.1px] text-white bg-[#36C7B6] rounded-[9px] w-fit">Забронировать сейчас</button> 
+            <button class="px-3 py-2.5 font-semibold text-sm leading-[19.1px] text-white bg-[#36C7B6] rounded-[9px] w-fit cursor-pointer">Забронировать сейчас</button> 
+        </div>
+        <div class="relative w-full rounded-[20px] bg-[#9AE3DB45] flex flex-col gap-4 py-6 pl-[456px] pr-9">
+            <img src="../Assets/Images/insurance/end.png" alt="" class="absolute top-1/2 -translate-y-1/2 left-11">
+            <p class="text-3xl leading-[36px] font-semibold">Хотите что-то предложить? <br> Присоединяйтесь к нам!</p>
+            <p class="text-[15px] leading-[18px]">Если вы квалифицированный врач или медсестра, сотрудник сертифицированной компании скорой помощи или поставщик медицинских услуг, ищущий партнера для оказания качественных медицинских услуг, мы приглашаем вас присоединиться к нашей растущей семье поставщиков Onhes.</p>
+            <button class="mt-1 rounded-[9px] bg-[#007EC2] text-white py-2.5 px-3 text-sm leading-[19.1px] font-semibold w-fit cursor-pointer">Присоединяйтесь к нам</button>
         </div>
     </main>
 
