--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
     <title>Главная</title>
 </head>
 <body>
-    
+    <a href="Pages/insurance.html" class="text-2xl">Страхование здоровья</a>
 </body>
 </html>
