--- a/index.html
+++ b/index.html
@@ -4,8 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Главная</title>
+    <link rel="stylesheet" href="Assets/CSS/main.css">
 </head>
-<body>
+<body class="flex items-center justify-center">
     <a href="Pages/insurance.html" class="text-2xl">Страхование здоровья</a>
 </body>
 </html>
