--- a/Pages/insurance.html
+++ b/Pages/insurance.html
@@ -60,7 +60,7 @@
                 <div class="dropdown py-5 px-[30px]">
                     <button class="dropdownToggler flex items-center justify-between w-full cursor-pointer">
                         <span class="text-xl leading-[24px] font-medium">Что такое Onhes?</span>
-                        <img src="../Assets/Images/icons/plus.png" alt="" class="transition-all duration-500">
+                        <img src="../Assets/Images/icons/plus.svg" alt="" class="transition-all duration-500">
                     </button>
                     <div class="dropdownList w-full mt-1 hidden">
                         <p>Onhes – это онлайн сервис здоровья, позволяющий быстро и легко оформить визит медсестры на дом по всей России. Мы стремимся создать ориентированную на пользователя среду здравоохранения со всеми инновациями.</p>
@@ -70,7 +70,7 @@
                 <div class="dropdown py-5 px-[30px]">
                     <button class="dropdownToggler flex items-center justify-between w-full cursor-pointer">
                         <span class="text-xl leading-[24px] font-medium">Какие услуги вы предоставляете?</span>
-                        <img src="../Assets/Images/icons/plus.png" alt="" class="transition-all duration-500">
+                        <img src="../Assets/Images/icons/plus.svg" alt="" class="transition-all duration-500">
                     </button>
                     <div class="dropdownList w-full mt-1 hidden">
                         <p>Onhes – это онлайн сервис здоровья, позволяющий быстро и легко оформить визит медсестры на дом по всей России. Мы стремимся создать ориентированную на пользователя среду здравоохранения со всеми инновациями.</p>
@@ -80,7 +80,7 @@
                 <div class="dropdown py-5 px-[30px]">
                     <button class="dropdownToggler flex items-center justify-between w-full cursor-pointer">
                         <span class="text-xl leading-[24px] font-medium">Я могу записаться на любой день?</span>
-                        <img src="../Assets/Images/icons/plus.png" alt="" class="transition-all duration-500">
+                        <img src="../Assets/Images/icons/plus.svg" alt="" class="transition-all duration-500">
                     </button>
                     <div class="dropdownList w-full mt-1 hidden">
                         <p>Onhes – это онлайн сервис здоровья, позволяющий быстро и легко оформить визит медсестры на дом по всей России. Мы стремимся создать ориентированную на пользователя среду здравоохранения со всеми инновациями.</p>
@@ -90,7 +90,7 @@
                 <div class="dropdown py-5 px-[30px]">
                     <button class="dropdownToggler flex items-center justify-between w-full cursor-pointer">
                         <span class="text-xl leading-[24px] font-medium">Могу ли я выбрать специалиста, который ко мне придёт?</span>
-                        <img src="../Assets/Images/icons/plus.png" alt="" class="transition-all duration-500">
+                        <img src="../Assets/Images/icons/plus.svg" alt="" class="transition-all duration-500">
                     </button>
                     <div class="dropdownList w-full mt-1 hidden">
                         <p>Onhes – это онлайн сервис здоровья, позволяющий быстро и легко оформить визит медсестры на дом по всей России. Мы стремимся создать ориентированную на пользователя среду здравоохранения со всеми инновациями.</p>
@@ -100,7 +100,7 @@
                 <div class="dropdown py-5 px-[30px]">
                     <button class="dropdownToggler flex items-center justify-between w-full cursor-pointer">
                         <span class="text-xl leading-[24px] font-medium">Какие гарантии у вас есть?</span>
-                        <img src="../Assets/Images/icons/plus.png" alt="" class="transition-all duration-500">
+                        <img src="../Assets/Images/icons/plus.svg" alt="" class="transition-all duration-500">
                     </button>
                     <div class="dropdownList w-full mt-1 hidden">
                         <p>Onhes – это онлайн сервис здоровья, позволяющий быстро и легко оформить визит медсестры на дом по всей России. Мы стремимся создать ориентированную на пользователя среду здравоохранения со всеми инновациями.</p>
