--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
     <title>Главная</title>
     <link rel="stylesheet" href="Assets/CSS/main.css">
 </head>
-<body class="flex items-center justify-center">
+<body class="flex flex-col gap-6 items-center justify-center w-full min-h-screen">
     <a href="Pages/insurance.html" class="text-2xl">Страхование здоровья</a>
+    <a href="Pages/business.html" class="text-2xl">Бизнес</a>
 </body>
 </html>
