--- a/index.html
+++ b/index.html
@@ -9,5 +9,6 @@
 <body class="flex flex-col gap-6 items-center justify-center w-full min-h-screen">
     <a href="Pages/insurance.html" class="text-2xl">Страхование здоровья</a>
     <a href="Pages/business.html" class="text-2xl">Бизнес</a>
+    <a href="Pages/security.html" class="text-2xl">Безопасность</a>
 </body>
 </html>
