--- a/Pages/security.html
+++ b/Pages/security.html
@@ -11,7 +11,7 @@
         <div class="flex gap-[30px]">
             <div class="flex flex-col gap-[50px] h-[600px] w-[19%] rounded-[20px] shadow-[0px_0px_20px_0px_#00000017] py-9 bg-[linear-gradient(102.33deg,_rgba(255,255,255,0.3)_-23.19%,_rgba(155,227,219,0.3)_40.09%,_rgba(111,187,218,0.3)_95.66%)]">
                 <div class="flex items-center gap-3 px-6">
-                    <img src="../Assets/Images/profile/logo.png" alt="">
+                    <img src="../Assets/Images/profile/logo.png" alt="" class="w-11 h-11">
                     <p class="text-[17px] leading-[20.4px] font-medium">Александр<br> Смирнов</p>
                 </div>
                 <div class="flex flex-col text-[15px] leading-[18px]">
