--- a/Pages/security.html
+++ b/Pages/security.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="../Assets/CSS/main.css">
 </head>
 <body>
-    <main class="container mx-auto max-w-[1200px] flex flex-col gap-[60px] my-[60px]">
+    <main class="container mx-auto max-w-[1200px] flex flex-col gap-[60px] my-[60px] nunito">
         <div class="flex gap-[30px]">
             <div class="flex flex-col gap-[50px] h-[600px] w-[19%] rounded-[20px] shadow-[0px_0px_20px_0px_#00000017] py-9 bg-[linear-gradient(102.33deg,_rgba(255,255,255,0.3)_-23.19%,_rgba(155,227,219,0.3)_40.09%,_rgba(111,187,218,0.3)_95.66%)]">
                 <div class="flex items-center gap-3 px-6">
