--- a/Pages/business.html
+++ b/Pages/business.html
@@ -6,8 +6,8 @@
     <title>Бизнес</title>
     <link rel="stylesheet" href="../Assets/CSS/main.css">
 </head>
-<body class="nunito">
-    <main class="container mx-auto max-w-[1200px] flex flex-col gap-[60px] my-[60px]">
+<body>
+    <main class="container mx-auto max-w-[1200px] flex flex-col gap-[60px] my-[60px] nunito">
         <div class="flex flex-col gap-6">
             <div class="flex items-center gap-2.5 text-[15px] leading-[18px]">
                 <a href="#">Главная</a>
