--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Главная</title>
     <link rel="stylesheet" href="Assets/CSS/main.css">
 </head>
-<body class="flex flex-col gap-6 items-center justify-center w-full min-h-screen">
+<body class="flex flex-col gap-6 items-center justify-center w-full min-h-screen nunito">
     <a href="Pages/insurance.html" class="text-2xl">Страхование здоровья</a>
     <a href="Pages/business.html" class="text-2xl">Бизнес</a>
     <a href="Pages/security.html" class="text-2xl">Безопасность</a>
