--- a/Pages/security.html
+++ b/Pages/security.html
@@ -54,8 +54,7 @@
                     <a href="#" class="px-6 py-4 flex items-center gap-2">
                         <svg width="18" height="18" viewBox="0 0 18 18" fill="none" xmlns="http://www.w3.org/2000/svg">
                             <path d="M9 12.75C9 14.8211 10.6789 16.5 12.75 16.5C14.8211 16.5 16.5 14.8211 16.5 12.75C16.5 10.6789 14.8211 9 12.75 9C10.6789 9 9 10.6789 9 12.75ZM9 12.75C9 11.9056 9.27907 11.1264 9.75 10.4996V3.75M9 12.75C9 13.369 9.14998 13.953 9.4156 14.4676C8.78375 15.0013 7.32438 15.375 5.625 15.375C3.34683 15.375 1.5 14.7034 1.5 13.875V3.75M9.75 3.75C9.75 4.57843 7.90317 5.25 5.625 5.25C3.34683 5.25 1.5 4.57843 1.5 3.75M9.75 3.75C9.75 2.92157 7.90317 2.25 5.625 2.25C3.34683 2.25 1.5 2.92157 1.5 3.75M1.5 10.5C1.5 11.3284 3.34683 12 5.625 12C7.26675 12 8.68449 11.6512 9.34848 11.1463M9.75 7.125C9.75 7.95343 7.90317 8.625 5.625 8.625C3.34683 8.625 1.5 7.95343 1.5 7.125" stroke="black" stroke-width="1.2" stroke-linecap="round" stroke-linejoin="round"/>
-                            </svg>
-                            
+                        </svg>                            
                         <span>Финансы</span>
                     </a>
                     <a href="#" class="px-6 py-4 flex items-center gap-2 bg-[#36C7B6] text-white">
@@ -87,7 +86,7 @@
                                 <p class="font-medium">Номер телефона</p>
                                 <div class="relative w-full">
                                     <input value="+7 (999) 999-99-99" type="text" class="w-full px-4 py-3 rounded-[20px] shadow-[0px_0px_20px_0px_#0000001A] placeholder:text-[#5E5E5E]">
-                                    <button class="absolute top-1/2 -translate-y-1/2 right-4">
+                                    <button class="absolute top-1/2 -translate-y-1/2 right-4 cursor-pointer">
                                         <svg width="18" height="18" viewBox="0 0 18 18" fill="none" xmlns="http://www.w3.org/2000/svg">
                                             <path d="M13.5 7.49998L10.5 4.49998M1.875 16.125L4.41328 15.843C4.72339 15.8085 4.87845 15.7913 5.02338 15.7443C5.15197 15.7027 5.27434 15.6439 5.38717 15.5695C5.51434 15.4856 5.62466 15.3753 5.84529 15.1547L15.75 5.24998C16.5784 4.42156 16.5784 3.07841 15.75 2.24998C14.9216 1.42156 13.5784 1.42156 12.75 2.24998L2.8453 12.1547C2.62466 12.3753 2.51434 12.4856 2.43048 12.6128C2.35607 12.7256 2.29726 12.848 2.25564 12.9766C2.20872 13.1215 2.19149 13.2766 2.15703 13.5867L1.875 16.125Z" stroke="#111111" stroke-width="1.2" stroke-linecap="round" stroke-linejoin="round"/>
                                         </svg>                                            
@@ -98,7 +97,7 @@
                                 <p class="font-medium">Email</p>
                                 <div class="relative w-full">
                                     <input value="pochtapochta@gmail.com" type="email" class="w-full px-4 py-3 rounded-[20px] shadow-[0px_0px_20px_0px_#0000001A] placeholder:text-[#5E5E5E]">
-                                    <button class="absolute top-1/2 -translate-y-1/2 right-4">
+                                    <button class="absolute top-1/2 -translate-y-1/2 right-4 cursor-pointer">
                                         <svg width="18" height="18" viewBox="0 0 18 18" fill="none" xmlns="http://www.w3.org/2000/svg">
                                             <path d="M13.5 7.49998L10.5 4.49998M1.875 16.125L4.41328 15.843C4.72339 15.8085 4.87845 15.7913 5.02338 15.7443C5.15197 15.7027 5.27434 15.6439 5.38717 15.5695C5.51434 15.4856 5.62466 15.3753 5.84529 15.1547L15.75 5.24998C16.5784 4.42156 16.5784 3.07841 15.75 2.24998C14.9216 1.42156 13.5784 1.42156 12.75 2.24998L2.8453 12.1547C2.62466 12.3753 2.51434 12.4856 2.43048 12.6128C2.35607 12.7256 2.29726 12.848 2.25564 12.9766C2.20872 13.1215 2.19149 13.2766 2.15703 13.5867L1.875 16.125Z" stroke="#111111" stroke-width="1.2" stroke-linecap="round" stroke-linejoin="round"/>
                                         </svg>                                            
@@ -114,7 +113,7 @@
                                 <p class="font-medium">Текущий пароль</p>
                                 <div class="relative w-full">
                                     <input value="1234567891234567890" type="password" class="w-full px-4 py-3 rounded-[20px] shadow-[0px_0px_20px_0px_#0000001A] placeholder:text-[#5E5E5E]">
-                                    <button class="absolute top-1/2 -translate-y-1/2 right-4">
+                                    <button class="absolute top-1/2 -translate-y-1/2 right-4 cursor-pointer">
                                         <svg width="18" height="18" viewBox="0 0 18 18" fill="none" xmlns="http://www.w3.org/2000/svg">
                                             <path d="M8.05721 3.81924C8.36202 3.77417 8.67645 3.75 9.00031 3.75C12.8291 3.75 15.3415 7.12863 16.1855 8.46512C16.2877 8.62688 16.3388 8.70776 16.3673 8.8325C16.3888 8.92619 16.3888 9.074 16.3673 9.16768C16.3387 9.29243 16.2873 9.37384 16.1844 9.53668C15.9595 9.89261 15.6166 10.3928 15.1624 10.9353M5.04324 5.03628C3.42169 6.13628 2.32084 7.66453 1.81583 8.46396C1.71321 8.6264 1.66191 8.70762 1.6333 8.83236C1.61182 8.92605 1.61181 9.07383 1.63328 9.16752C1.66187 9.29226 1.71295 9.37313 1.8151 9.53488C2.65916 10.8714 5.17156 14.25 9.00031 14.25C10.5441 14.25 11.8739 13.7007 12.9666 12.9575M2.25031 2.25L15.7503 15.75M7.40932 7.40901C7.00215 7.81618 6.75031 8.37868 6.75031 9C6.75031 10.2426 7.75767 11.25 9.00031 11.25C9.62163 11.25 10.1841 10.9982 10.5913 10.591" stroke="#111111" stroke-width="1.2" stroke-linecap="round" stroke-linejoin="round"/>
                                         </svg>                                                                                      
