--- a/index.html
+++ b/index.html
@@ -10,5 +10,6 @@
     <a href="Pages/insurance.html" class="text-2xl">Страхование здоровья</a>
     <a href="Pages/business.html" class="text-2xl">Бизнес</a>
     <a href="Pages/security.html" class="text-2xl">Безопасность</a>
+    <a href="Pages/profile.html" class="text-2xl">Профиль</a>
 </body>
 </html>
