--- a/Pages/business.html
+++ b/Pages/business.html
@@ -132,7 +132,7 @@
                         <input type="text" class="w-full px-4 py-3 rounded-[20px] shadow-[0px_0px_20px_0px_#0000001A] placeholder:text-[#5E5E5E]" placeholder="Город">
                         <input type="text" class="w-full px-4 py-3 rounded-[20px] shadow-[0px_0px_20px_0px_#0000001A] placeholder:text-[#5E5E5E]" placeholder="Комментарий">
                     </div>
-                    <div class="flex items-start gap-2 max-w-[529px] group">
+                    <div class="flex items-start gap-2 max-w-[529px]">
                         <div class="border border-[#111111] rounded-[3px] flex items-center justify-center mt-[2px] w-4 h-4 shrink-0">
                             <input id="agree" type="checkbox" class="sr-only peer">
                             <img src="../Assets/Images/icons/checkbox.svg" alt="" class="transition-all duration-500 opacity-0 peer-checked:opacity-100">
@@ -145,8 +145,5 @@
             </div>
         </div>
     </main>
-
-    <script src="https://code.jquery.com/jquery-3.7.1.min.js" integrity="sha256-/JqT3SQfawRcv/BIHPThkBvs0OEvtFFmqPF/lYI/Cxo=" crossorigin="anonymous"></script>
-    <script src="../Assets/JS/main.js"></script>
 </body>
 </html>
