--- a/index.html
+++ b/index.html
@@ -11,5 +11,7 @@
     <a href="Pages/business.html" class="text-2xl">Бизнес</a>
     <a href="Pages/security.html" class="text-2xl">Безопасность</a>
     <a href="Pages/profile.html" class="text-2xl">Профиль</a>
+    <a href="Pages/services1.html" class="text-2xl">Услуги, выбор категории</a>
+    <a href="Pages/services2.html" class="text-2xl">Услуги, выбор улсуг в категории</a>
 </body>
 </html>
