--- a/index.html
+++ b/index.html
@@ -13,5 +13,6 @@
     <a href="Pages/profile.html" class="text-2xl">Профиль</a>
     <a href="Pages/services1.html" class="text-2xl">Услуги, выбор категории</a>
     <a href="Pages/services2.html" class="text-2xl">Услуги, выбор улсуг в категории</a>
+    <a href="Pages/cart.html" class="text-2xl">Корзина</a>
 </body>
 </html>
