--- a/Pages/cart.html
+++ b/Pages/cart.html
@@ -81,7 +81,7 @@
                         <p>Корзина</p>
                     </div>
                     <p class="text-3xl leading-[36px] font-semibold">Корзина</p>
-                    <div class="flex items-end p-4 rounded-[12px] shadow-[0px_0px_20px_0px_#00000014] text-[15px] leading-[18px] justify-between">
+                    <div class="flex items-start p-4 rounded-[12px] shadow-[0px_0px_20px_0px_#00000014] text-[15px] leading-[18px] justify-between">
                         <div class="flex flex-col gap-2">
                             <p class="font-semibold">Услуга</p>
                             <p>Визит медсестры на дом</p>
@@ -110,7 +110,7 @@
                                 </button>
                             </div>
                         </div>
-                        <div class="flex items-center gap-2.5">
+                        <div class="flex items-center gap-2.5 self-end">
                             <button class="cursor-pointer">
                                 <svg width="21" height="21" viewBox="0 0 21 21" fill="none" xmlns="http://www.w3.org/2000/svg">
                                     <rect width="21" height="21" rx="3" fill="#007EC2" fill-opacity="0.21"/>
@@ -125,7 +125,7 @@
                             </button>
                         </div>
                     </div>
-                    <div class="flex items-end p-4 rounded-[12px] shadow-[0px_0px_20px_0px_#00000014] text-[15px] leading-[18px] justify-between">
+                    <div class="flex items-start p-4 rounded-[12px] shadow-[0px_0px_20px_0px_#00000014] text-[15px] leading-[18px] justify-between">
                         <div class="flex flex-col gap-2">
                             <p class="font-semibold">Услуга</p>
                             <p>Визит медсестры на дом</p>
@@ -154,7 +154,7 @@
                                 </button>
                             </div>
                         </div>
-                        <div class="flex items-center gap-2.5">
+                        <div class="flex items-center gap-2.5 self-end">
                             <button class="cursor-pointer">
                                 <svg width="21" height="21" viewBox="0 0 21 21" fill="none" xmlns="http://www.w3.org/2000/svg">
                                     <rect width="21" height="21" rx="3" fill="#007EC2" fill-opacity="0.21"/>
