--- a/Pages/orders.html
+++ b/Pages/orders.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Профиль</title>
+    <title>Текущие заказы</title>
     <link rel="stylesheet" href="../Assets/CSS/main.css">
 </head>
 <body>
@@ -80,7 +80,174 @@
                 <div class="flex flex-col gap-4">
                     <p class="text-3xl leading-[36px] font-semibold">Текущие заказы</p>
                     <p class="text-2xl leading-[28.8px] font-medium">Календарь</p>
-                    
+                    <div class="rounded-[12px] shadow-[0px_0px_20px_0px_#0000001A] w-full">
+                        <div class="flex items-center justify-between pt-[22px] px-5">
+                            <button class="cursor-pointer">
+                                <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                    <path d="M15 18L9 12L15 6" stroke="#202027" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
+                                </svg>                                    
+                            </button>
+                            <p class="text-xl leading-[24px] font-semibold">Декабрь 2024</p>
+                            <button class="cursor-pointer">
+                                <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                    <path d="M9 18L15 12L9 6" stroke="#202027" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
+                                </svg>                                    
+                            </button>
+                        </div>
+                        <div class="grid grid-cols-7 gap-x-5 text-[15px] leading-[18px] text-center">
+                            <p class="py-5 px-[50px] font-semibold">ПН</p>
+                            <p class="py-5 px-[50px] font-semibold">ВТ</p>
+                            <p class="py-5 px-[50px] font-semibold">СР</p>
+                            <p class="py-5 px-[50px] font-semibold">ЧТ</p>
+                            <p class="py-5 px-[50px] font-semibold">ПТ</p>
+                            <p class="py-5 px-[50px] font-semibold">СБ</p>
+                            <p class="py-5 px-[50px] font-semibold">ВС</p>
+
+                            <div class="w-full h-px bg-[#8C8C8C] col-span-full"></div>
+
+                            <p class="px-10 py-2.5 text-[#858585]">
+                                <span class="rounded-[8px] flex items-center justify-center w-10 h-10">25</span>
+                            </p>
+                            <p class="px-10 py-2.5 text-[#858585]">
+                                <span class="rounded-[8px] flex items-center justify-center w-10 h-10">26</span>
+                            </p>
+                            <p class="px-10 py-2.5 text-[#858585]">
+                                <span class="rounded-[8px] flex items-center justify-center w-10 h-10">27</span>
+                            </p>
+                            <p class="px-10 py-2.5 text-[#858585]">
+                                <span class="rounded-[8px] flex items-center justify-center w-10 h-10">28</span>
+                            </p>
+                            <p class="px-10 py-2.5 text-[#858585]">
+                                <span class="rounded-[8px] flex items-center justify-center w-10 h-10">29</span>
+                            </p>
+                            <p class="px-10 py-2.5 text-[#858585]">
+                                <span class="rounded-[8px] flex items-center justify-center w-10 h-10">30</span>
+                            </p>
+                            <p class="px-10 py-2.5">
+                                <span class="rounded-[8px] flex items-center justify-center w-10 h-10">1</span>
+                            </p>
+
+                            <div class="w-full h-px bg-[#DEDEDE] col-span-full"></div>
+
+                            <p class="px-10 py-2.5">
+                                <span class="rounded-[8px] flex items-center justify-center w-10 h-10">2</span>
+                            </p>
+                            <p class="px-10 py-2.5">
+                                <span class="rounded-[8px] flex items-center justify-center w-10 h-10">3</span>
+                            </p>
+                            <p class="px-10 py-2.5">
+                                <span class="rounded-[8px] flex items-center justify-center w-10 h-10">4</span>
+                            </p>
+                            <p class="px-10 py-2.5">
+                                <span class="rounded-[8px] flex items-center justify-center w-10 h-10">5</span>
+                            </p>
+                            <p class="px-10 py-2.5">
+                                <span class="rounded-[8px] flex items-center justify-center w-10 h-10">6</span>
+                            </p>
+                            <p class="px-10 py-2.5">
+                                <span class="rounded-[8px] flex items-center justify-center w-10 h-10">7</span>
+                            </p>
+                            <p class="px-10 py-2.5">
+                                <span class="rounded-[8px] flex items-center justify-center w-10 h-10">8</span>
+                            </p>
+
+                            <div class="w-full h-px bg-[#DEDEDE] col-span-full"></div>
+
+                            <p class="px-10 py-2.5">
+                                <span class="rounded-[8px] flex items-center justify-center w-10 h-10">9</span>
+                            </p>
+                            <p class="px-10 py-2.5">
+                                <span class="rounded-[8px] flex items-center justify-center w-10 h-10">10</span>
+                            </p>
+                            <p class="px-10 py-2.5">
+                                <span class="rounded-[8px] flex items-center justify-center w-10 h-10 text-white bg-[#007EC2] relative after:absolute after:bottom-1 after:w-[22px] after:h-[3px] after:bg-white after:rounded-[2px]">11</span>
+                            </p>
+                            <p class="px-10 py-2.5">
+                                <span class="rounded-[8px] flex items-center justify-center w-10 h-10 relative after:absolute after:bottom-1 after:w-[22px] after:h-[3px] after:bg-[#007EC2] after:rounded-[2px]">12</span>
+                            </p>
+                            <p class="px-10 py-2.5">
+                                <span class="rounded-[8px] flex items-center justify-center w-10 h-10">13</span>
+                            </p>
+                            <p class="px-10 py-2.5">
+                                <span class="rounded-[8px] flex items-center justify-center w-10 h-10 relative after:absolute after:bottom-1 after:w-[22px] after:h-[3px] after:bg-[#007EC2] after:rounded-[2px]">14</span>
+                            </p>
+                            <p class="px-10 py-2.5">
+                                <span class="rounded-[8px] flex items-center justify-center w-10 h-10">15</span>
+                            </p>
+
+                            <div class="w-full h-px bg-[#DEDEDE] col-span-full"></div>
+
+                            <p class="px-10 py-2.5">
+                                <span class="rounded-[8px] flex items-center justify-center w-10 h-10">16</span>
+                            </p>
+                            <p class="px-10 py-2.5">
+                                <span class="rounded-[8px] flex items-center justify-center w-10 h-10 relative after:absolute after:bottom-1 after:w-[22px] after:h-[3px] after:bg-[#007EC2] after:rounded-[2px]">17</span>
+                            </p>
+                            <p class="px-10 py-2.5">
+                                <span class="rounded-[8px] flex items-center justify-center w-10 h-10">18</span>
+                            </p>
+                            <p class="px-10 py-2.5">
+                                <span class="rounded-[8px] flex items-center justify-center w-10 h-10">19</span>
+                            </p>
+                            <p class="px-10 py-2.5">
+                                <span class="rounded-[8px] flex items-center justify-center w-10 h-10">20</span>
+                            </p>
+                            <p class="px-10 py-2.5">
+                                <span class="rounded-[8px] flex items-center justify-center w-10 h-10">21</span>
+                            </p>
+                            <p class="px-10 py-2.5">
+                                <span class="rounded-[8px] flex items-center justify-center w-10 h-10">22</span>
+                            </p>
+
+                            <div class="w-full h-px bg-[#DEDEDE] col-span-full"></div>
+
+                            <p class="px-10 py-2.5">
+                                <span class="rounded-[8px] flex items-center justify-center w-10 h-10">23</span>
+                            </p>
+                            <p class="px-10 py-2.5">
+                                <span class="rounded-[8px] flex items-center justify-center w-10 h-10">24</span>
+                            </p>
+                            <p class="px-10 py-2.5">
+                                <span class="rounded-[8px] flex items-center justify-center w-10 h-10">25</span>
+                            </p>
+                            <p class="px-10 py-2.5">
+                                <span class="rounded-[8px] flex items-center justify-center w-10 h-10 relative after:absolute after:bottom-1 after:w-[22px] after:h-[3px] after:bg-[#007EC2] after:rounded-[2px]">26</span>
+                            </p>
+                            <p class="px-10 py-2.5">
+                                <span class="rounded-[8px] flex items-center justify-center w-10 h-10">27</span>
+                            </p>
+                            <p class="px-10 py-2.5">
+                                <span class="rounded-[8px] flex items-center justify-center w-10 h-10">28</span>
+                            </p>
+                            <p class="px-10 py-2.5">
+                                <span class="rounded-[8px] flex items-center justify-center w-10 h-10 relative after:absolute after:bottom-1 after:w-[22px] after:h-[3px] after:bg-[#007EC2] after:rounded-[2px]">29</span>
+                            </p>
+
+                            <div class="w-full h-px bg-[#DEDEDE] col-span-full"></div>
+
+                            <p class="px-10 py-2.5">
+                                <span class="rounded-[8px] flex items-center justify-center w-10 h-10 relative after:absolute after:bottom-1 after:w-[22px] after:h-[3px] after:bg-[#007EC2] after:rounded-[2px]">30</span>
+                            </p>
+                            <p class="px-10 py-2.5">
+                                <span class="rounded-[8px] flex items-center justify-center w-10 h-10">31</span>
+                            </p>
+                            <p class="px-10 py-2.5 text-[#858585]">
+                                <span class="rounded-[8px] flex items-center justify-center w-10 h-10">1</span>
+                            </p>
+                            <p class="px-10 py-2.5 text-[#858585]">
+                                <span class="rounded-[8px] flex items-center justify-center w-10 h-10">2</span>
+                            </p>
+                            <p class="px-10 py-2.5 text-[#858585]">
+                                <span class="rounded-[8px] flex items-center justify-center w-10 h-10 relative after:absolute after:bottom-1 after:w-[22px] after:h-[3px] after:bg-[#007EC2] after:rounded-[2px]">3</span>
+                            </p>
+                            <p class="px-10 py-2.5 text-[#858585]">
+                                <span class="rounded-[8px] flex items-center justify-center w-10 h-10">4</span>
+                            </p>
+                            <p class="px-10 py-2.5 text-[#858585]">
+                                <span class="rounded-[8px] flex items-center justify-center w-10 h-10">5</span>
+                            </p>
+                        </div>
+                    </div>
                     <div class="flex items-end mt-1 justify-between">
                         <p class="text-2xl leading-[28.8px] font-medium">Список</p>
                         <select class="py-3 px-4 text-[15px] leading-[18px] font-semibold shadow-[0px_0px_20px_0px_#0000001A] w-[247px] rounded-[12px]">
