--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     <a href="Pages/services1.html" class="text-2xl">Услуги, выбор категории</a>
     <a href="Pages/services2.html" class="text-2xl">Услуги, выбор улсуг в категории</a>
     <a href="Pages/orders.html" class="text-2xl">Текущие заказы, персонал</a>
+    <a href="Pages/orderDetails.html" class="text-2xl">Детали заказа</a>
     <a href="Pages/cart.html" class="text-2xl">Корзина</a>
 </body>
 </html>
