--- a/index.html
+++ b/index.html
@@ -8,13 +8,13 @@
 </head>
 <body class="flex flex-col gap-6 items-center justify-center w-full min-h-screen nunito">
     <a href="Pages/insurance.html" class="text-2xl">Страхование здоровья</a>
-    <a href="Pages/business.html" class="text-2xl">Бизнес</a>
-    <a href="Pages/security.html" class="text-2xl">Безопасность</a>
-    <a href="Pages/profile.html" class="text-2xl">Профиль</a>
-    <a href="Pages/services1.html" class="text-2xl">Услуги, выбор категории</a>
-    <a href="Pages/services2.html" class="text-2xl">Услуги, выбор улсуг в категории</a>
+    <a href="Pages/business.html" class="text-2xl">О компании / Бизнес</a>
+    <a href="Pages/security.html" class="text-2xl">Профиль пациеннта. Безопасность</a>
+    <a href="Pages/profile.html" class="text-2xl">Профиль пациеннта</a>
     <a href="Pages/orders.html" class="text-2xl">Текущие заказы, персонал</a>
     <a href="Pages/orderDetails.html" class="text-2xl">Детали заказа</a>
+    <a href="Pages/services1.html" class="text-2xl">Услуги, выбор категории</a>
+    <a href="Pages/services2.html" class="text-2xl">Услуги, выбор улсуг в категории</a>
     <a href="Pages/cart.html" class="text-2xl">Корзина</a>
 </body>
 </html>
