--- a/index.html
+++ b/index.html
@@ -16,5 +16,6 @@
     <a href="Pages/services1.html" class="text-2xl">Услуги, выбор категории</a>
     <a href="Pages/services2.html" class="text-2xl">Услуги, выбор улсуг в категории</a>
     <a href="Pages/cart.html" class="text-2xl">Корзина</a>
+    <a href="Pages/modals.html" class="text-2xl">Модальные окна</a>
 </body>
 </html>
