--- a/index.html
+++ b/index.html
@@ -17,5 +17,7 @@
     <a href="Pages/services2.html" class="text-2xl">Услуги, выбор улсуг в категории</a>
     <a href="Pages/cart.html" class="text-2xl">Корзина</a>
     <a href="Pages/modals.html" class="text-2xl">Модальные окна</a>
+    <a href="Pages/nurseProfile.html" class="text-2xl">Профиль медсестры</a>
+    <a href="Pages/completeOrder.html" class="text-2xl">Оформление заказа</a>
 </body>
 </html>
